syntax = "proto3";

package proto;

option go_package = "gprc/proto";

message InsertWarehouseReq {
  string productId = 1;
}
message InsertWarehouseRes {
  uint64 id = 1;
  string productId = 2;
  uint64 count = 3;
}

service WarehouseService {
  rpc InsertWarehouse(InsertWarehouseReq) returns (InsertWarehouseRes) {}
}